kubernetes-cluster/manifests/apps/duplicacy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: duplicacy
  namespace: tools
spec:
  selector:
    app: duplicacy
  ports:
  - port: 80
    targetPort: 3675
