kubernetes-cluster/manifests/apps/duplicacy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duplicacy
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.org/websocket-services: "duplicacy"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - backups.appchemy.co.za
    secretName: duplicacy-tls
  rules:
  - host: backups.appchemy.co.za
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: duplicacy
            port:
              number: 80
